# arkanjo

./: .clang-format  .clang-format-ignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  MAINTAINERS.md  Makefile  PATCHES.md  README.md  config.json  orchestrator.cpp  orchestrator.hpp  pyproject.toml
.github/ISSUE_TEMPLATE/: real_world_report.yml
.github/actions/setup-env/: action.yml
.github/workflows/: ci.yml  cy.yml  main.yml
archive/: README.md
arkanjo/: Makefile  orchestrator.cpp
arkanjo/base/: config.hpp  function.cpp  function.hpp  path.hpp  similarity_table.hpp  utils.cpp  utils.hpp
arkanjo/big_clone/: big_clone_formater.hpp  big_clone_tailor_evaluator.hpp
arkanjo/counter/: counter_duplication_code.hpp  counter_duplication_code_trie.hpp
arkanjo/explorer/: similarity_explorer.cpp  similarity_explorer.hpp
arkanjo/finder/: similar_function_finder.hpp
arkanjo/pre/: duplication_finder_diff.hpp  duplication_finder_tool.hpp  function_breaker.hpp  function_breaker_c.hpp  function_breaker_java.hpp  function_breaker_util.hpp  parser.hpp  preprocessor.hpp
arkanjo/rand/: random_selector.hpp
arkanjo/tests/e2e/: test.cpp
base/: config.cpp  config.hpp  function.cpp  function.hpp  linux_utils.hpp  path.cpp  similarity_table.cpp  similarity_table.hpp  utils.cpp  utils.hpp  windows_utils.hpp
big_clone/: big_clone_formater.hpp
clean/: preprocessor_clean.cpp  preprocessor_clean.hpp
cmake/: CompilerOptions.cmake  Documentation.cmake  Formatter.cmake  Libgit2.cmake  Targets.cmake  TreeSitter.cmake
cmake/targets/: PythonCommands.cmake
commands/big_clone/: big_clone_formater.cpp  big_clone_formater.hpp  big_clone_tailor_evaluator.cpp  big_clone_tailor_evaluator.hpp
commands/counter/: counter_duplication_code.cpp  counter_duplication_code.hpp  counter_duplication_code_trie.cpp  counter_duplication_code_trie.hpp
commands/explorer/: similarity_explorer.cpp  similarity_explorer.hpp
commands/finder/: similar_function_finder.cpp  similar_function_finder.hpp
commands/pre/: duplication_finder_diff.hpp  duplication_finder_tool.cpp  duplication_finder_tool.hpp  function_breaker.hpp  function_breaker_c.hpp  function_breaker_java.hpp  function_breaker_util.hpp  parser.cpp  parser.hpp  preprocessor.cpp  preprocessor.hpp
commands/rand/: random_selector.hpp
counter/: counter_duplication_code.cpp
docs/: PATCHES_MAC0470_5856_2025.md  similarity.md
docs/contributions/: PATCHES_MAC0470_5856_2025.md  PATCHES_MAC0470_5856_2026.md
docs/developer-guide/: architecture.md  benchmarks.md  similarity-model.md  testing.md
docs/languages/: adding-a-language.md
docs/methods/: llm.md  tool.md
explorer/: similarity_explorer.hpp
finder/: similar_function_finder.hpp
include/arkanjo/: orchestrator.hpp  orchestrator_helper.hpp
include/arkanjo/base/: config.hpp  config_types.hpp  function.hpp  path.hpp  preprocess_state.hpp  similarity_table.hpp  utils.hpp
include/arkanjo/cli/: cli_error.hpp  formatter.hpp  options_collector.hpp  parser_options.hpp
include/arkanjo/commands/: command.hpp  command_base.hpp  commands_registry.hpp
include/arkanjo/formatter/: base.hpp  format_manager.hpp  template_renderer.hpp
include/arkanjo/methods/: method.hpp
include/arkanjo/parser/: feature_extractor.hpp  tree_sitter_parser.hpp
include/arkanjo/utils/: os_utils.hpp  utils.hpp
pre/: duplication_finder_diff.hpp  duplication_finder_tool.hpp  function_breaker.hpp  function_breaker_c.hpp  function_breaker_java.hpp  function_breaker_util.hpp  preprocessor_main.cpp
src/: main.cpp  orchestrator.cpp  orchestrator.hpp  orchestrator_commands.hpp  orchestrator_helper.hpp
src/base/: README.md  config.cpp  function.cpp  path.cpp  preprocess_state.cpp  similarity_table.cpp
src/base/config/: config.cpp
src/base/function/: function.cpp  function_loader.cpp  function_printer.cpp
src/base/storage/: function_storage.cpp
src/cli/: parser_options.cpp
src/commands/benchmark/: main.py  run.py  utils.py
src/commands/big_clone/: big_clone_formater.cpp  big_clone_formater.hpp  big_clone_tailor_evaluator.cpp  big_clone_tailor_evaluator.hpp
src/commands/counter/: counter_duplication_code.cpp  counter_duplication_code.hpp  counter_duplication_code_trie.cpp  counter_duplication_code_trie.hpp
src/commands/explorer/: similarity_explorer.cpp  similarity_explorer.hpp  similarity_explorer_entry.hpp
src/commands/finder/: similar_function_finder.cpp  similar_function_finder.hpp  similar_function_finder_entry.hpp
src/commands/git/: git_diff_function.cpp  git_diff_function.hpp
src/commands/help/: help.cpp  help.hpp
src/commands/pre/: duplication_finder_diff.cpp  duplication_finder_diff.hpp  duplication_finder_tool.cpp  duplication_finder_tool.hpp  function_breaker.cpp  function_breaker.hpp  (+11 more)
src/parser/: feature_extractor.cpp  tree_sitter_parser.cpp
src/utils/: apple_utils.cpp  apple_utils.hpp  linux_utils.cpp  linux_utils.hpp  posix_utils.cpp  utils.cpp  windows_utils.cpp  windows_utils.hpp
tests/: .gitignore
tests/e2e/: codebase_input.txt  test.cpp
utils/: apple_utils.hpp  linux_utils.hpp  utils.cpp  windows_utils.hpp
(+89 files in other folders)
